--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <body>
     <div class="grid">
       <div class="left-grid flex">
-        <div class="box">
+        <div class="box box1">
           <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-1.png" alt="">
           <p>Spiderman</p>
           <h2>12</h2>
         </div>
-        <div class="box">
+        <div class="box box2">
           <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-15.png" alt="">
           <p>Black Panther</p>
           <h2>30</h2>
@@ -26,35 +26,19 @@
         <h1>5-0</h1>
       </div>
       <div class="right-grid flex">
-        <div class="box">
+        <div class="box box3">
           <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-20.png" alt="">
           <p>Thanos</p>
           <h2>50</h2>
         </div>
-        <div class="box">
+        <div class="box box4">
           <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-4.png" alt="">
           <p>Gem Women</p>
           <h2>12</h2>
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer class="footer">Made with ♥️ by Kalvian</footer>
   </body>
 </html>
